# design_pattern

./: CMakeLists.txt  readme.md  test.cpp
adapter_pattern/: CMakeLists.txt  JSONProcessor.h  JsonAdapter.h  XMLProcessor.h  main.cpp  readme.md
chain_of_responsibility_pattern/: BaseHandle.cpp  BaseHandle.h  CMakeLists.txt  FirstHandle.h  SecondHandle.h  main.cpp  readme.md
command_pattern/: CMakeLists.txt  command.h  dance_command.h  hua_receiver.h  main.cpp  mi_receiver.h  piano_command.h  robot_invoke.h  sing_command.h
composite_pattern/: CMakeLists.txt  circle.h  composite_graphic.h  dot.h  graphic.h  main.cpp  readme.md
decorator_pattern/: CMakeLists.txt  coffee.h  coffee_decorator.h  coffee_produce.h  main.cpp  milk_decorator.h  readme.md  sugar_decorator.h
factory_pattern/: CMakeLists.txt  factory_product.h  factorya.h  factoryb.h  main.cpp  product.h  producta.h  productb.h  readme.md
observer_pattern/: CMakeLists.txt  MediaPublisher.cpp  MediaPublisher.h  StuSubscriber.cpp  StuSubscriber.h  WangSubscriber.h  ZhangSubscriber.h  main.cpp  readme.md
proxy_pattern/: CMakeLists.txt  law_suit.h  main.cpp  proxy_lawyer.h  readme.md  student.h
singleton_pattern/: CMakeLists.txt  main.cpp  readme.md  singleton.h
strategy_pattern/: BaseTraffic.h  BusTraffic.h  CMakeLists.txt  CarTraffic.h  TrafficStrategy.h  main.cpp  readme.md
